--- a/page6.html
+++ b/page6.html
@@ -82,22 +82,22 @@
                     Datenschutz</h4>
                 <p class="mbr-text mbr-fonts-style display-7">Im Folgenden möchten wir Sie aufklären, wie Ihre Daten von uns verarbeitet werden.
 <br>
-<br><strong>Verantwortlich im Sinne der DSGVO ist:
-<br></strong>Jan Lukas Lindner<br>Friedrichstr. 37<br>72793 Pfullingen<br>jlfilmundfoto@gmail.com<br><br><strong>Unseren Datenschutzbeauftragten erreichen sie unter:
-<br></strong>Jan Lukas Lindner
+<br><strong><em>Verantwortlich im Sinne der DSGVO ist:
+<br></em></strong>Jan Lukas Lindner<br>Friedrichstr. 37<br>72793 Pfullingen<br>jlfilmundfoto@gmail.com<br><br><strong><em>Unseren Datenschutzbeauftragten erreichen sie unter:
+<br></em></strong>Jan Lukas Lindner
 <br>Friedrichstr. 37
 <br>72793 Pfullingen
 <br>jlfilmundfoto@gmail.com<br><br>Sollten Sie per E-Mail [oder über Kontaktformular] mit uns Kontakt aufnehmen, werden die mitgeteilten Daten von uns gespeichert, um Ihr Anliegen zu bearbeiten.
 <br>
-<br><strong>Zu den verarbeiteten Daten zählen:
-<br></strong>[Ihr Name]
+<br><strong><em>Zu den verarbeiteten Daten zählen:
+<br></em></strong>[Ihr Name]
 <br>[Ihre E-Mail-Adresse]
 <br>[Ihre Nachricht]
 <br>
 <br>Wir werden die Daten löschen, sobald die Speicherung nicht mehr erforderlich ist oder die Verarbeitung einschränken, falls gesetzliche Aufbewahrungspflichten bestehen.
 <br>
-<br><strong>Betroffenenrechte
-</strong><br>
+<br><strong><em>Betroffenenrechte
+</em></strong><br>
 <br>Sie haben als betroffene Person, das Recht auf Auskunft, das Recht auf Berichtigung oder Löschung, das Recht auf Einschränkung der Verarbeitung und das Recht auf Widerspruch gegen die Verarbeitung Ihrer Daten. Sofern Sie uns eine Einwilligung erteilt haben, können Sie diese jederzeit mit Wirkung für die Zukunft widerrufen.
 <br>
 <br>Bitte richten Sie Ihren Widerspruch [oder Widerruf] formlos an folgende Adresse:
@@ -109,11 +109,31 @@
 <br>Rechtliche Hinweise
 <br>Betroffenenrechte
 <br>
-<br>Sollte die Datenverarbeitung nicht auf Einwilligung des Betroffenen beruhen (siehe Kontaktformular), muss das Widerrufsrecht nicht angegeben werden (Art. 13 Abs. 2 lit. c DSGVO).<br><br><strong>Rechtliche Hinweise
-<br><em>Betroffenenrechte
-<br></em></strong>
-<br>Sollte die Datenverarbeitung nicht auf Einwilligung des Betroffenen beruhen (siehe Kontaktformular), muss das Widerrufsrecht nicht angegeben werden (Art. 13 Abs. 2 lit. c DSGVO).<br><br><strong>Hosting
-</strong><br>Unser Hoster erhebt in sog. Logfiles folgende Daten, die Ihr Browser übermittelt:
+<br>Sollte die Datenverarbeitung nicht auf Einwilligung des Betroffenen beruhen (siehe Kontaktformular), muss das Widerrufsrecht nicht angegeben werden (Art. 13 Abs. 2 lit. c DSGVO).<br><br><strong><em>Kontaktformular
+</em></strong><br><br>Wir stellen Ihnen ein Kontaktformular zur Verfügung, mit dem wir folgende personenbezogene Daten erheben:
+<br>
+<br>[Name]
+<br>[E-Mail-Adresse]
+<br>
+<br>Pflichtangaben sind mit einem * gekennzeichnet.
+<br>
+<br>Zusätzlich erheben wir:
+<br>
+<br>[Zeitpunkt der Übermittlung]
+<br>[IP-Adresse]
+<br>
+<br>Die Daten werden ausschließlich zum Zweck der Übermittlung von Anfragen und deren Beantwortung gespeichert. Die Pflichtangaben dienen der Zuordnung und der Beantwortung Ihres Anliegen. Dies entspricht unserem berechtigten Interesse (Art. 6 Abs. 1 lit f DSGVO). [Falls Sie sich über ein angebotenes Produkt oder eine Dienstleistung informieren, erfolgt die Verarbeitung zur Durchführung vorvertraglicher Maßnahmen (Art 6. Abs. 1 lit b DSGVO).]
+<br>
+<br>[Wir setzen für die Zurverfügungstellung des Formulars folgenden Drittanbieter ein.
+<br>
+<br>[Name und Anschrift Hoster]
+<br>
+<br>Dieser ist Empfänger Ihrer personenbezogenen Daten und als Auftragsverarbeiter für uns tätig.]
+<br>
+<br>Sie haben das Recht der Verarbeitung zu widersprechen. Ob der Widerspruch erfolgreich ist, ist im Rahmen einer Interessenabwägung zu ermitteln. Weitere Informationen finden Sie unter dem Punkt „Betroffenenrechte“.
+<br>
+<br>Ihre Daten werden nach Abschluss der Bearbeitung gelöscht.<br><br><strong><em>Hosting
+</em></strong><br>Unser Hoster erhebt in sog. Logfiles folgende Daten, die Ihr Browser übermittelt:
 <br>
 <br>IP-Adresse, die Adresse der vorher besuchten Website (Referer Anfrage-Header), Datum und Uhrzeit der Anfrage, Zeitzonendifferenz zur Greenwich Mean Time, Inhalt der Anforderung, HTTP-Statuscode, übertragene Datenmenge, Website, von der die Anforderung kommt und Informationen zu Browser und Betriebssystem.
 <br>
@@ -139,9 +159,16 @@
 <br>Die Verarbeitung der unter diesem Abschnitt angegebenen Daten ist weder gesetzlich noch vertraglich vorgeschrieben. Die Funktionsfähigkeit der Website ist ohne die Verarbeitung nicht gewährleistet.
 <br>
 <br>GitHub hat Compliance-Maßnahmen für internationale Datenübermittlungen umgesetzt. Diese gelten für alle weltweiten Aktivitäten, bei denen GitHub personenbezogene Daten von natürlichen Personen in der EU verarbeitet. Diese Maßnahmen basieren auf den EU-Standardvertragsklauseln (SCCs). Weitere Informationen finden Sie unter: <a href="https://docs.github.com/en/free-pro-team@latest/github/site-policy/github-data-protection-addendum#attachment-1–the-standard-contractual-clauses-processors" class="text-primary" target="_blank">https://docs.github.com/en/free-pro-team@latest/github/site-policy/github-data-protection-addendum#attachment-1–the-standard-contractual-clauses-processors</a>
-<br><br><strong>Rechtliche Hinweise
+<br><br><strong>Rechtliche Hinweise</strong><br><br><em><strong>Betroffenenrechte
+</strong></em><br>
+<br>Sollte die Datenverarbeitung nicht auf Einwilligung des Betroffenen beruhen (siehe Kontaktformular), muss das Widerrufsrecht nicht angegeben werden (Art. 13 Abs. 2 lit. c DSGVO).<strong><br></strong><br><strong><em>Hosting</em></strong><br><br>Grundsätzlich ist ein Auftragsverarbeitungsvertrag mit dem Hoster abzuschließen. Das bayerische Landesamt für Datenschutzaufsicht hat für das Hosting rein statischer Websites eine Ausnahme gemacht. Für den Fall, dass die Webseite der Selbstdarstellung dient, z.B. von Vereinen oder Kleinunternehmen, keine personenbezogenen Daten an den Betreiber fließen und kein Tracking stattfindet, liegt keine Auftragsverarbeitung vor. Weiter heißt es: „Die Tatsache, dass auch beim Hosting von statischen Webseiten zwangsläufig IP-Adressen, d.h. personenbezogene Daten, verarbeitet werden müssen, führt nicht zur Annahme einer Auftragsverarbeitung. Das wäre nicht sachgerecht. Die (kurzfristige) IP-Adressenspeicherung ist vielmehr noch der TK-Zugangsvermittlung des Website-Hosters nach dem TKG zuzurechnen und dient in erster Linie Sicherheitszwecken des Hosters.“ (https://www.lda.bayern.de/media/veroeffentlichungen/FAQ_Hosting_keine_Auftragsverarbeitung.pdf) Wir gehen davon aus, dass diese Ausnahme auf GitHub Pages anzuwenden ist.<br><br><strong><em>Einwilligung
+</em></strong><br>
+<br>Eine Einwilligung des Nutzers ist nicht erforderlich, da der Websitebetreiber ein berechtigtes Interesse hat Nutzeranfragen, die über das Kontaktformular eingehen, zu beantworten (Art. 6 Abs. 1 lit. f DSGVO). Sollten Informationen über angebotene Waren oder Dienstleistungen angefordert werden, ist zusätzlich Art. 6 Abs. 1 lit. f DSGVO einschlägig. Eine Einwilligung ist jedoch erforderlich, wenn besondere Kategorien personenbezogener Daten im Sinne des Art. 9 Abs. 1 DSGVO verarbeitet werden. (Bayerisches Landesamt für Datenschutzaufsicht, 8. Tätigkeitsbericht S.56 https://www.lda.bayern.de/media/baylda_report_08.pdf)
+<br>
+<br>Es ist jedoch mehr als fraglich, ob das berechtigte Interesse auch die Übertragung personenbezogener Daten an Dritte umfasst, wenn eine Deaktivierung ohne großen technischen Aufwand möglich ist. Beachte die technischen Hinweise.
+<br><br><strong>Technische Hinweise
 <br></strong>
-<br>Grundsätzlich ist ein Auftragsverarbeitungsvertrag mit dem Hoster abzuschließen. Das bayerische Landesamt für Datenschutzaufsicht hat für das Hosting rein statischer Websites eine Ausnahme gemacht. Für den Fall, dass die Webseite der Selbstdarstellung dient, z.B. von Vereinen oder Kleinunternehmen, keine personenbezogenen Daten an den Betreiber fließen und kein Tracking stattfindet, liegt keine Auftragsverarbeitung vor. Weiter heißt es: „Die Tatsache, dass auch beim Hosting von statischen Webseiten zwangsläufig IP-Adressen, d.h. personenbezogene Daten, verarbeitet werden müssen, führt nicht zur Annahme einer Auftragsverarbeitung. Das wäre nicht sachgerecht. Die (kurzfristige) IP-Adressenspeicherung ist vielmehr noch der TK-Zugangsvermittlung des Website-Hosters nach dem TKG zuzurechnen und dient in erster Linie Sicherheitszwecken des Hosters.“ (https://www.lda.bayern.de/media/veroeffentlichungen/FAQ_Hosting_keine_Auftragsverarbeitung.pdf) Wir gehen davon aus, dass diese Ausnahme auf GitHub Pages anzuwenden ist.</p>
+<br>Kontaktformulare sollten grundsätzlich selbst gehostet und so eingerichtet sein, dass keine IP-Adressen der Nutzer erfasst werden. Außerdem sollten keine übermittelten Daten im CMS selbst gespeichert werden, insbesondere dann nicht, wenn die Nachricht ohnehin als E-Mail weitergeleitet wird. Die Übertragung der eingegebenen Daten muss transportverschlüsselt erfolgen, sonst können datenschutzrechtliche und wettbewerbsrechtliche Konsequenzen drohen. Es sollte geprüft werden, ob Server, E-Mail-Provider, die Applikation oder das verwendete Plugin Logfiles anlegen oder ob Telemetriedaten an Drittanbieter gesendet werden, die personenbezogene Daten enthalten. Diese Informationen könnten sowohl im Rahmen der erhobenen Daten als auch für die Speicherdauer relevant sein. Entsprechende Funktionen sollten nach Möglichkeit deaktiviert werden.<br></p>
             </div>
         </div>
     </div>
@@ -189,7 +216,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2796769" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Built with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/website-maker.html">Free Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2796769" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Designed with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/website-design-software.html">Web Designing Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
