create github pages

--- a/page2.html
+++ b/page2.html
@@ -31,21 +31,6 @@
   
 </head>
 <body>
-
-<!-- Analytics -->
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LHHY4SLPRL"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-LHHY4SLPRL');
-</script>
-<!-- /Analytics -->
-
-
   
   <section data-bs-version="5.1" class="menu menu2 cid-sZXMY19iew" once="menu" id="menu2-s">
     
@@ -57,7 +42,7 @@
                         <img src="assets/images/logo-xxl-wei-auf-transparent-96x73.png" alt="Mobirise Website Builder" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-7" href="index.html">JL Film &amp; Foto</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-7" href="home.html">JL Film &amp; Foto</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -181,7 +166,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="VZfwDx18BnMwxG1BJwZOZ/n4Y2R4oYlwx8Iyu0Zd+YGZbYvVj6CaIBQNt9NEm2tBmk3PVvBoDbV/0JSxbpGZbA5sFuCqC5OcjuK7oyc9+SP4o/rMhbZcxsy6cP2qiLS6">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="BL1+wedTX3+ysYZwWudYq3L2Ud6v/bfiOdCulMX5HeoYEqE8hLI3i8j41wUtJOFt4sU+qwc+O19C1HKf5yT/wRWlAAvyJ648RmOx8pKH6DeP95B6qfuyYF40EL8OLxti">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Vielen Dank für Ihre Nachricht!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
