--- a/page6.html
+++ b/page6.html
@@ -30,21 +30,6 @@
   
 </head>
 <body>
-
-<!-- Analytics -->
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LHHY4SLPRL"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-LHHY4SLPRL');
-</script>
-<!-- /Analytics -->
-
-
   
   <section data-bs-version="5.1" class="content5 cid-t8zZZMzDqm" id="content5-u">
     
@@ -158,7 +143,7 @@
                         <img src="assets/images/logo-xxl-wei-auf-transparent-96x73.png" alt="Mobirise Website Builder" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-7" href="index.html">JL Film &amp; Foto</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-7" href="home.html">JL Film &amp; Foto</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
