--- a/page3.html
+++ b/page3.html
@@ -53,7 +53,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page1.html">About</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page1.html">About</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page7.html">Services</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page5.html">References</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page4.html">Downloads</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page2.html">Contakt</a>
                     </li></ul>
@@ -69,7 +69,7 @@
                     </a>
                     
                 </div>
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://jantethedog.github.io/jlfilmundfoto/">Startseite</a></div>
+                
             </div>
         </div>
     </nav>
