--- a/page5.html
+++ b/page5.html
@@ -8,13 +8,13 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="">
   <meta property="og:image" content="">
-  <meta name="twitter:title" content="Referenzen">
+  <meta name="twitter:title" content="References">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-xxl-wei-auf-transparent-96x73.png" type="image/x-icon">
   <meta name="description" content="Ich bin ambitionierter Hobbyfotograf und -Filmemacher aus Pfullingen bei Stuttgart und stelle Ihnen hier mein Refernzmaterial zur Schau - Überzeugen Sie sich selbst von meiner Arbeit!">
   
   
-  <title>Referenzen</title>
+  <title>References</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -52,7 +52,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page1.html">About</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page1.html">About</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page7.html">Services</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page5.html">References</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page4.html">Downloads</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page2.html">Contakt</a>
                     </li></ul>
@@ -68,7 +68,7 @@
                     </a>
                     
                 </div>
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://jantethedog.github.io/jlfilmundfoto/">Startseite</a></div>
+                
             </div>
         </div>
     </nav>
