create github pages

--- a/page1.html
+++ b/page1.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="">
   <meta name="twitter:title" content="About">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo-xxl-wei-auf-transparent-96x73.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
   <meta name="description" content="Ich bin ambitionierter Hobbyfotograf und -Filmemacher aus Pfullingen bei Stuttgart mit über 2 Jahren Erfahrung bei Vielen Projekten wie Kurzfilmen, Verlobungen, Imagevideos, uvm.">
   
   
@@ -83,17 +83,15 @@
         <div class="row align-items-center">
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
-                    <img src="assets/images/pass-schul-foto-bild-jan-lukas-lindner-gesicht-1256x1884.jpeg" alt="Mobirise Website Builder">
+                    <img src="assets/images/avatar-2388584-600x600.png" alt="Mobirise Website Builder">
                     
                 </div>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5">
-                        <strong>Jan Lukas Lindner</strong></h3>
-                    <p class="mbr-text mbr-fonts-style display-7">Mein Name ist Jan Lukas Lindner - Ich bin ambitionierter Hobby-Fotograf und -Filmemacher. Dieses Hobby begann für mich im Alter von 8 Jahren, als ich meine erste Kamera bekam: eine Canon IXUS 150. Nachdem diese kaputt ging bekam ich dank der Großzügigkeit meiner Oma eine Canon IXUS 170. Doch über die Zeit verlor sich das Hobbie. Im Urlaub fotografiere ich immer wieder mit der DSLR meines Vaters – Von den Möglichkeiten dieser Kamera beeindruckt machte mir meine Kompaktkamera immer weniger Spaß - Ich wollte ebenfalls eine DSLR. 
-<br><br>Nach Jahren des Abwartens, in denen das Hobby in den Hintergrund getreten war, kaufte ich 2020 dann endlich meine erste eigene DSLR: eine Nikon D3300. Mein Objektivportfolio erweiterte sich schnell und ich probierte vieles aus. Ich beschäftigte mich intensiv mit Videoschnitt, Bildbearbeitung, Foto- und Videografie und habe dabei schon Erfahrung mit kleineren Projekten, wie z.B. Online-Veranstaltungen, Schulprojekten, Verlobungsfilmen und Imagfilmen gesammelt.<br><br>Doch ich stieß auch schnell an die Grenzen meiner Kamera: Speziell beim Filmen war sie leider sehr unterdurchschnittlich, also sah ich mich immer wieder nach höherwertigen Alternativen um.
-<br><br>Nach 2 Jahren des Sparens und des Lernens gab ich meine geliebte Nikon dann schließlich weg und kaufte mir eine neue Canon EOS R6 – Eine großartige Hybrid-DSLM mit der ich nun fotografiere und filme und bei der ich sicherlich nicht allzu bald an die Grenzen des Geräts stoßen werde…&nbsp;<br><br>Auf dieser Website finden Sie einige meiner Projekte, sowie Informationen über mich. Auch haben Sie die Möglichkeit mich für ihr eigenes Projekt oder Event zu engagieren - egal ob Feier, Film oder Fotoshooting. Fragen Sie mich einfach über das Kontaktformular an.<br></p>
+                        <strong>Incomplete</strong></h3>
+                    <p class="mbr-text mbr-fonts-style display-7">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
                 </div>
             </div>
         </div>
@@ -134,7 +132,7 @@
 				<div class="timeline-blank"></div>
 				<div class="timeline-text d-flex-2">
 					<span>
-						<a href="page3.html#content7-19"><h6><u>15. Juni 2022 - Wir kommen zusammen</u></h6></a>
+						<a href="page3.html#content7-19"><h6><u>Lorem Ipsum</u><br></h6></a>
 					</span>
 					<div class="t-square"></div>
 				</div>
@@ -144,7 +142,7 @@
 				<div class="timeline-blank"></div>
 				<div class="timeline-text d-flex-2">
 					<span>
-						<a href="page3.html#content7-10"><h6><u>29. Mai 2022 - Unser erster Kuss</u></h6></a> 
+						<a href="page3.html#content7-10"><h6><u>Lorem Ipsum</u><br></h6></a> 
 					</span>
 					<div class="t-square"></div>
 				</div>
@@ -154,7 +152,7 @@
 				<div class="timeline-blank"></div>
 				<div class="timeline-text d-flex-2">
 					<span>
-						<h6>13. September 2021 - Erster Schultag</h6>
+						<h6>Lorem Ipsum</h6>
 					</span>
 					<div class="t-square"></div>
 				</div>
@@ -164,7 +162,7 @@
 				<div class="timeline-blank"></div>
 				<div class="timeline-text d-flex-2">
 					<span>
-						<h6>26. Juni 2021 - Kennenlerntag</h6>
+						<h6>Lorem Ipsum</h6>
 					</span>
 					<div class="t-square"></div>
 				</div>
@@ -174,7 +172,7 @@
 				<div class="timeline-blank"></div>
 				<div class="timeline-text d-flex-2">
 					<span>
-						<h6>16. April 2021 - 2. Projekttage</h6>
+						<h6>Lorem Ipsum</h6>
 					</span>
 					<div class="t-square"></div>
 				</div>
