--- a/page5.html
+++ b/page5.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="">
   <meta name="twitter:title" content="References">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo-xxl-wei-auf-transparent-96x73.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
   <meta name="description" content="Ich bin ambitionierter Hobbyfotograf und -Filmemacher aus Pfullingen bei Stuttgart und stelle Ihnen hier mein Refernzmaterial zur Schau - Überzeugen Sie sich selbst von meiner Arbeit!">
   
   
@@ -207,7 +207,8 @@
 
 <!-- Place your own code below -->
 <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-9a896765-5716-4722-82da-0b25c88e63eb"></div><!-- Place your own code above -->
+<div class="elfsight-app-9a896765-5716-4722-82da-0b25c88e63eb"></div>
+<!-- Place your own code above -->
 
 </section>
 
