create github pages

--- a/page2.html
+++ b/page2.html
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=72793 Pfullingen, Germany" allowfullscreen=""></iframe></div>
+                <div class="google-map"></div>
             </div>
         </div>
     </div>
@@ -150,7 +150,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="3QIEFtdOSrBMnfxulnN7IYhB0AAdWBp9z/wXSxDdfUUMe/rLC5ZHxi0btC8tmqjeTK5mdwJrj1dzjJV7DbXVv2AwI+Ofqw+HOhMItyoPH0+fALaZJvsscnmswqss5U+0">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="N3b7dsPbuIv7UFXARaSp0eE9bOMjMsoAoTO7x5z4MlhFwJ+po2i5ailEa228aGG4gkEvVR9nNjktftkcnr+r0fUYlZjPF9xQjOgYlR1uncQDNdr5D1G7E5qfSufCJv1K">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for you message!
 Vielen Dank für Ihre Nachricht!</div>
