create github pages

--- a/page2.html
+++ b/page2.html
@@ -116,7 +116,7 @@
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
-                            <strong>Folgt noch...</strong></h6>
+                            <strong>Work in Progress</strong></h6>
                         <p class="mbr-text mbr-fonts-style display-7"><a href="page2.html" class="text-primary">Noch in Arbeit...</a></p>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=72793 Pfullingen, Germany" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
@@ -150,7 +150,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="N3b7dsPbuIv7UFXARaSp0eE9bOMjMsoAoTO7x5z4MlhFwJ+po2i5ailEa228aGG4gkEvVR9nNjktftkcnr+r0fUYlZjPF9xQjOgYlR1uncQDNdr5D1G7E5qfSufCJv1K">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="SV6ywsxAQE4zSM7N7lMHhmvyKbtL1ATXGD5rMBQlmaqqnRR99lSE/UWPCXA/01nFSiLlQlpC+7brnYyu4MdZGjQ2jAgYP3eH+QmJVN9sYFoZmwsFH9gY1i+y36KC9qGG">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for you message!
 Vielen Dank für Ihre Nachricht!</div>
