--- a/page7.html
+++ b/page7.html
@@ -91,7 +91,7 @@
                 <div class="text-wrapper">
                     <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">
                         <strong>Services</strong></h1>
-                    <p class="mbr-text mbr-fonts-style display-7"><em><br></em><br><br><em>“What I like about photographers is that they capture a moment that's gone forever, impossible to reproduce.”</em><em><br></em><br><em>"</em>Was ich an Fotografen mag, ist, dass sie einen Moment festhalten, der für immer vorbei ist und nicht reproduziert werden kann.<em>"</em><br><em>
+                    <p class="mbr-text mbr-fonts-style display-7"><em><br></em><br><br><em>“What I like about photographers is that they capture a moment that's gone forever, impossible to reproduce.”</em><em><br></em><br><em>"Was ich an Fotografen mag, ist, dass sie einen Moment festhalten, der für immer vorbei ist und nicht reproduziert werden kann."<br>
 </em><br><strong>~ Karl Lagerfeld&nbsp;</strong><br></p>
                     <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="page7.html#slider4-1v">Photo / Foto</a> <a class="btn btn-primary display-4" href="page7.html#slider4-1x">Video / Film</a></div>
                 </div>
@@ -176,8 +176,8 @@
     <div class="position-relative text-center">
         <div class="mbr-section-head">
             <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                <strong>Video-Services / Video-Leistungen</strong><strong><br></strong><strong><br></strong></h4>
-            <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">Your idea is not in the list? Contact us for individual feedback! / Ihre Idee ist nicht auf der Liste? Kontaktieren Sie uns für eine individuelle Rückmeldung!</h5>
+                <strong>Video-Services / Video-Leistungen</strong><strong><br></strong></h4>
+            <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-7"><br>Your idea is not in the list? Contact us for individual feedback! / Ihre Idee ist nicht auf der Liste? Kontaktieren Sie uns für eine individuelle Rückmeldung!</h5>
         </div>
         <div class="embla mt-4" data-skip-snaps="true" data-align="center" data-contain-scroll="trimSnaps" data-loop="true" data-auto-play="true" data-auto-play-interval="10" data-draggable="true">
             <div class="embla__viewport container-fluid">
