create github pages

--- a/page2.html
+++ b/page2.html
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=72793 Pfullingen, Germany" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
@@ -150,7 +150,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="M5/LvHjV6VQYTr0Zi8NIh8SFJlhwcpi65gNAUHl7PijOeAswzBbnaXJ8NLex+5Bq1p5ogwjITtug66oiTMv6Jv3LcpmA5W2Z0abt8Ts9J5Mbdmst0BxWNWFuRatOk3RK">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Mea2d5B//WqACNhjRFdOUsBjxcP9aaP9v1jKCPo7tRkCJ5fhOerbtHCEHani+jvLkf/GJuMbKSLnGWpf+NqArQe8BN9oVOnhJQNO+q2EBWBiO8c0ChTIUzftpH1S5Rsp">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for you message!
 Vielen Dank für Ihre Nachricht!</div>
