create github pages

--- a/page2.html
+++ b/page2.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="">
   <meta name="twitter:title" content="Contact">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo-xxl-wei-auf-transparent-96x73.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
   <meta name="description" content="Ich bin ambitionierter Hobbyfotograf und -Filmemacher aus Pfullingen bei Stuttgart und stehe Ihnen für Ihre Feieren und Projekte gerne zur Verfügung. Kontaktieren Sie mich einfach über das Kontaktformular!">
   
   
@@ -39,7 +39,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/logo-xxl-wei-auf-transparent-96x73.png" alt="Mobirise Website Builder" style="height: 3rem;">
+                        <img src="assets/images/jl-film-foto-wei-10k-schwarz-140x96.png" alt="Mobirise Website Builder" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-7" href="home.html">JL Film &amp; Foto</a></span>
@@ -54,7 +54,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page1.html">About</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page7.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page5.html">References</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page4.html">Downloads</a></li>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page5.html">Gallery</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page4.html">Downloads</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page2.html">Contakt</a>
                     </li></ul>
                 <div class="icons-menu">
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=72793 Pfullingen, Germany" allowfullscreen=""></iframe></div>
+                <div class="google-map"></div>
             </div>
         </div>
     </div>
@@ -150,7 +150,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Mea2d5B//WqACNhjRFdOUsBjxcP9aaP9v1jKCPo7tRkCJ5fhOerbtHCEHani+jvLkf/GJuMbKSLnGWpf+NqArQe8BN9oVOnhJQNO+q2EBWBiO8c0ChTIUzftpH1S5Rsp">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ykwAcF76dITkTQrUwctIv3qeXcSu4vtWb61wm1BOnR0bq4iQPzWlqys5Lmxiu/+zZjcfpdhScOyydjLuU2F4sH7ysa8AMQZuTyc4eMtrs2uZcAjAG6Z3Jy4hMoRYvxGk">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for you message!
 Vielen Dank für Ihre Nachricht!</div>
