--- a/page4.html
+++ b/page4.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="">
   <meta name="twitter:title" content="Downloads">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo-xxl-wei-auf-transparent-96x73.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
   <meta name="description" content="Ich bin ambitionierter Hobbyfotograf und -Filmemacher aus Pfullingen bei Stuttgart und stelle Ihnen ausgewählte Bilder vollkommen kostenlos über Pixabay zur freien Verwendung zur Verfügung!">
   
   
@@ -38,7 +38,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/logo-xxl-wei-auf-transparent-96x73.png" alt="Mobirise Website Builder" style="height: 3rem;">
+                        <img src="assets/images/jl-film-foto-wei-10k-schwarz-140x96.png" alt="Mobirise Website Builder" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-7" href="home.html">JL Film &amp; Foto</a></span>
@@ -53,7 +53,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page1.html">About</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page7.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page5.html">References</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page4.html">Downloads</a></li>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page5.html">Gallery</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page4.html">Downloads</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page2.html">Contakt</a>
                     </li></ul>
                 <div class="icons-menu">
