create github pages

--- a/page4.html
+++ b/page4.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="">
   <meta name="twitter:title" content="Downloads">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/jl-film-foto-wei-10k-schwarz-140x96.png" type="image/x-icon">
   <meta name="description" content="Ich bin ambitionierter Hobbyfotograf und -Filmemacher aus Pfullingen bei Stuttgart und stelle Ihnen ausgewählte Bilder vollkommen kostenlos über Pixabay zur freien Verwendung zur Verfügung!">
   
   
