--- a/page1.html
+++ b/page1.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="">
   <meta name="twitter:title" content="About">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/jl-film-foto-wei-10k-schwarz-140x96.png" type="image/x-icon">
   <meta name="description" content="Ich bin ambitionierter Hobbyfotograf und -Filmemacher aus Pfullingen bei Stuttgart mit über 2 Jahren Erfahrung bei Vielen Projekten wie Kurzfilmen, Verlobungen, Imagevideos, uvm.">
   
   
