--- a/page6.html
+++ b/page6.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="">
   <meta name="twitter:title" content="Datenschutz">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/jl-film-foto-wei-10k-schwarz-140x96.png" type="image/x-icon">
   <meta name="description" content="">
   
   
