create github pages

--- a/page2.html
+++ b/page2.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="">
   <meta name="twitter:title" content="Contact">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/jl-film-foto-wei-10k-schwarz-140x96.png" type="image/x-icon">
   <meta name="description" content="Ich bin ambitionierter Hobbyfotograf und -Filmemacher aus Pfullingen bei Stuttgart und stehe Ihnen für Ihre Feieren und Projekte gerne zur Verfügung. Kontaktieren Sie mich einfach über das Kontaktformular!">
   
   
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=72793 Pfullingen, Germany" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=72793 Pfullingen, Germany" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
@@ -150,7 +150,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="60Lrs/en3vBYMULotXL/7yY3NjWpF5uELBzpUiAw092XU16Fm1W4RtogpgdtbT5VO3AtcTHxytBpVkGftbedpqh/GRfz14cKiTzHuczdA4sc9g4EzRLEHAYP8upvYGG3">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="rOVe3NlAEJy+CmBiNP+QO519vX3OdOaDuGYPJsdjfkRz68OqDrthzkJ2uCuIfO2GRX0RpqAbko2taTL9aBHSXnlFgZ+vpDpgusnpsGtOzRmRjNxdySHtamTPcMVv/eTP">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for you message!
 Vielen Dank für Ihre Nachricht!</div>
