create github pages

--- a/home.html
+++ b/home.html
@@ -170,9 +170,9 @@
             <div class="col-12 col-lg-4">
                 <div class="text-wrapper">
                     <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5">
-                        <strong>References / Referenzen</strong></h3>
+                        <strong>References &amp; Gallery / Referenzen &amp; Gallerie</strong></h3>
                     <p class="mbr-text mbr-fonts-style display-7">
-                        See our performance for yourself - pictures as well as films and gather ideas and inspiration.<br><br>Überzeugen Sie sich selbst von unseren Leistungen - Bildern wie Filmen - und sammeln Sie Ideen und Inspiration.<br></p>
+                        See our performance for yourself - pictures as well as films - and gather ideas and inspiration.<br><br>Überzeugen Sie sich selbst von unseren Leistungen - Bildern wie Filmen - und sammeln Sie Ideen und Inspiration.<br></p>
                 </div>
                  <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="page5.html">Learn more / Mehr erfahren</a></div>
             </div>
