--- a/page2.html
+++ b/page2.html
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=72793 Pfullingen, Germany" allowfullscreen=""></iframe></div>
+                <div class="google-map"></div>
             </div>
         </div>
     </div>
@@ -150,7 +150,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="rOVe3NlAEJy+CmBiNP+QO519vX3OdOaDuGYPJsdjfkRz68OqDrthzkJ2uCuIfO2GRX0RpqAbko2taTL9aBHSXnlFgZ+vpDpgusnpsGtOzRmRjNxdySHtamTPcMVv/eTP">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="KhV4ESnBwhU63a91rzFNOlTBNaTO1EdPqa/MraR2MpzK5Pwivyoa+vHmQrE3zQdqa9FCfUahcMs18LOD85Lvo8Wx6o+nwOgBBLP64px4dXjs9Qty3CpPuTr2BeFR/b2x">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for you message!
 Vielen Dank für Ihre Nachricht!</div>
